# cilkdnn

./: .gitignore  CMakeLists.txt  Makefile  SETUP.md  build.sh  cilknn.cpp  matmul.cpp  test-conv2d.cpp  test.cpp
include/cilkdnn/: common_sysdep.hpp  conv2d.hpp  matmul.hpp  matmul_common.hpp
src/: CMakeLists.txt  cilkdnn.cpp  matmul_bcgen.cpp
test/: CMakeLists.txt  cilkdnn_pytest.py  conv2d_bcgen.cpp  test-matmul.cpp
toolchains/: clang_AVX512.cmake
